--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "adldap2/adldap2-laravel",
+    "name": "aleex1848/adldap2-laravel",
     "description": "LDAP Authentication & Management for Laravel.",
     "keywords": [
         "adldap",
